--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Manjunatha",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.4.1"
